--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,20 +11,21 @@
 # -----------------
 en: &DEFAULT_EN
   nav:
-    - title: "Research"
-      section: research
     - title: "Team"
       section: team
+    - title: "Research"
+      section: research
     - title: "Publications"
       section: publications
-    - title: "Timeline"
-      section: timeline
     - title: "Resources"
       section: resources
+    - title: "Fun"
+      section: fun
+    - title: "Timeline"
+      section: timeline
     - title: "Contact"
       section: contact
-    # - title: "Theme Source"
-    #   url: https://github.com/raviriley/agency-jekyll-theme/
+
 en-US:
   <<: *DEFAULT_EN
 en-CA:
@@ -34,25 +35,25 @@ en-GB:
 en-AU:
   <<: *DEFAULT_EN
 
-# Spanish
-# -------
-es: &DEFAULT_ES
-  nav:
-    - title: "Servicios"
-      section: servicios
-    - title: "Portafolio"
-      section: portafolio
-    - title: "Sobre Nosotros"
-      section: nosotros
-    - title: "Cronología"
-      section: cronologia
-    - title: "Equipo"
-      section: equipo
-    - title: "Contáctenos"
-      section: contacto
-    - title: "Fuente de la plantilla"
-      url: https://github.com/raviriley/agency-jekyll-theme/
-es-ES:
-  <<: *DEFAULT_ES
-es-CO:
-  <<: *DEFAULT_ES
+# # Spanish
+# # -------
+# es: &DEFAULT_ES
+#   nav:
+#     - title: "Servicios"
+#       section: servicios
+#     - title: "Portafolio"
+#       section: portafolio
+#     - title: "Sobre Nosotros"
+#       section: nosotros
+#     - title: "Cronología"
+#       section: cronologia
+#     - title: "Equipo"
+#       section: equipo
+#     - title: "Contáctenos"
+#       section: contacto
+#     - title: "Fuente de la plantilla"
+#       url: https://github.com/raviriley/agency-jekyll-theme/
+# es-ES:
+#   <<: *DEFAULT_ES
+# es-CO:
+#   <<: *DEFAULT_ES
