--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ locale: "en-US" # See available languages in _data/sitetext.yml
 analytics:
   google: 166777659 #Google Analytics tracking code here
 
-# collections:
-#   portfolio:
+collections:
+  research:
 
 markdown: kramdown
 
