--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -21,6 +21,7 @@ en: &DEFAULT_EN
     # text: "Small labs. Big science."
     # subtext: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde. **Markdown** supported.
     section: team
+    closebutton: "Close Member"
     people:
       - name: "Shaohe Wang"
         degree: Ph.D.
