--- a/_data/style.yml
+++ b/_data/style.yml
@@ -10,4 +10,4 @@ contact-image: "../img/contact.png"
 #Font Awesome icon for research grid when an item is hovered over
 research-icon: fas fa-expand-arrows-alt fa-3x #default: fas fa-plus fa-3x
 #Font Awesome icon for team member when an item is hovered over
-team-icon: fas fa-expand-arrows-alt fa-3x #default: fas fa-plus fa-3x
+team-icon: fas fa-plus fa-3x
