--- a/_data/style.yml
+++ b/_data/style.yml
@@ -4,7 +4,7 @@ highlight: "#930084"
 #black: "#000"
 
 #Image Customization
-# header-image: "../img/JRC-1.jpeg"
+# header-image: "../img/JRC/JRC-1.jpeg"
 header-image: "../img/Lab-website-header.gif"
 contact-image: "../img/contact.png"
 #Font Awesome icon for research grid when an item is hovered over
