--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -127,8 +127,15 @@ en: &DEFAULT_EN
       - title: "Lab opens!"
         year: "September 2022"
         desc: Our lab is part of <a href="https://4dcpjanelia.org" target="_blank">4D Cellular Physiology</a>, the new exciting research area at HHMI Janelia!
-        image: assets/img/timeline/1.jpg
+        image: assets/img/timeline/Empty_lab.jpg
         alt:
+      - title: "Angelo decides to join the lab!"
+        year: "November 2011"
+        desc: Angelo is a Ph.D. student in <a href="https://lab.vanderbilt.edu/tyska-lab/" target="_blank">Dr. Matt Tyska’s lab</a> at Vanderbilt University. He will be joining our lab as a postdoc in the spring of 2023!
+        image: assets/img/timeline/JRC_morning_002.jpg
+      #   alt:
+      #   # you can enforce the alignment
+      #   align: right
       # - title: "Di joins the lab!"
       #   year: "November 2011"
       #   desc: "Di joins the lab!"
@@ -137,8 +144,8 @@ en: &DEFAULT_EN
       #   # you can enforce the alignment
       #   align: right
     end: yes
-    end_title: "Opportunities for Undergraduate Scholar and Visisting Scientists!"
-    end_desc: See prospective positions in <a class="js-scroll-trigger" href="#team">TEAM</a> for details.
+    end_title: "Come work with us!"
+    end_desc: We have opportunities for undergraduate scholars and visisting scientists! See prospective positions in <a class="js-scroll-trigger" href="#team">TEAM</a> for details.
     end_image: assets/img/timeline/join-01.png
 
   contact:
