--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -136,10 +136,10 @@ en: &DEFAULT_EN
       #   alt:
       #   # you can enforce the alignment
       #   align: right
-      # - title: "Di joins the lab!"
-      #   year: "November 2022"
-      #   desc: "Di joins the lab!"
-      #   image: assets/img/timeline/2.jpg
+      - title: "Di joins the lab!"
+        year: "November 2022"
+        desc: "Di joins the lab!"
+        image: assets/img/timeline/1.jpg
       #   alt:
       #   # you can enforce the alignment
       #   align: right
