--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -113,6 +113,9 @@ en: &DEFAULT_EN
       - image: assets/img/fun/2023-07-31-group-photo-02.jpg
         name: 2023-07-31-group-photo-02.jpg
         description: "Happy group after the first lab meeting!"
+      - image: assets/img/fun/2023-06-23-Blowling-4DCP.jpg
+        name: 2023-06-23-Blowling-4DCP.jpg
+        description: "Bowling night of some 4DCP labs!"
 
   timeline:
     title: "Lab News"
