--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -88,12 +88,9 @@ en: &DEFAULT_EN
     # subtext: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde. **Markdown** supported.
     section: fun
     events:
-      - image: assets/img/fun/2023-06-13-Katherine-2nd-day.jpg
-        name: 2023-06-13-Katherine-2nd-day.jpg
-        description:
-      - image: assets/img/fun/2023-Selden-Island-Di-and-dandelion.jpg
-        name: 2023-Selden-Island-Di-and-dandelion.jpg
-        description:
+      # - image: assets/img/fun/2023-Selden-Island-Di-and-dandelion.jpg
+      #   name: 2023-Selden-Island-Di-and-dandelion.jpg
+      #   description:
     events_wide:
       - image: assets/img/fun/2022-Di-biou-01.png
         name: 2022-Di-biou-01.png
@@ -104,6 +101,9 @@ en: &DEFAULT_EN
       - image: assets/img/fun/2023-06-23-Blowling-4DCP.jpg
         name: 2023-06-23-Blowling-4DCP.jpg
         description: "Bowling night of some 4DCP labs!"
+      - image: assets/img/fun/2023-06-13-Katherine-2nd-day.jpg
+        name: 2023-06-13-Katherine-2nd-day.jpg
+        description:
 
   timeline:
     title: "Lab News"
