--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -100,10 +100,10 @@ en: &DEFAULT_EN
         description: "Happy group after the first lab meeting!"
       - image: assets/img/fun/2023-06-23-Blowling-4DCP.jpg
         name: 2023-06-23-Blowling-4DCP.jpg
-        description: "Bowling night of some 4DCP labs!"
-      - image: assets/img/fun/2023-06-13-Katherine-2nd-day.jpg
-        name: 2023-06-13-Katherine-2nd-day.jpg
-        description:
+        description: "Bowling night of some 4DCP labs."
+      - image: assets/img/fun/2023-lab-rafting-1.HEIC
+        name: 2023-lab-rafting-1.HEIC
+        description: "Rafting on the calm Potomac River!"
 
   timeline:
     title: "Lab News"
