--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -128,23 +128,18 @@ en: &DEFAULT_EN
         year: "April 2023"
         desc: "Welcome to Janelia, Angelo!"
         image: assets/img/timeline/JRC_morning_002.jpg
-      #   alt:
-      #   # you can enforce the alignment
-      #   align: right
       - title: "Katherine joins the lab!"
         year: "June 2023"
         desc: "Welcome to Janelia, Katherine!"
         image: assets/img/timeline/JRC_morning_001.jpg
-      #   alt:
-      #   # you can enforce the alignment
-      #   align: right
+      - title: "Di's annual review is online!"
+        year: "June 2023"
+        desc: Great read on tissue morphogenesis! See <a class="js-scroll-trigger" href="#publications">TEAM</a>.
+        image: assets/img/timeline/3.jpg
       - title: "Shunze joins the lab!"
         year: "July 2023"
         desc: "Welcome to Janelia, Shunze!"
         image: assets/img/timeline/2.jpg
-      #   alt:
-      #   # you can enforce the alignment
-      #   align: right
     end: yes
     end_title: "Come work with us!"
     end_desc: We have opportunities for undergraduate scholars and visisting scientists! See prospective positions in <a class="js-scroll-trigger" href="#team">TEAM</a> for details.
