--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -151,6 +151,10 @@ en: &DEFAULT_EN
         year: "May 2024"
         desc: "Welcome to Janelia, Ryan!"
         image: assets/img/timeline/JRC_morning_002.jpg
+      - title: Angelo's <a href="https://authors.elsevier.com/a/1jB4xFzn7SU8w" target="_blank">book chapter</a> is online! Congrats, Angelo!
+        year: "May 2024"
+        desc: "Welcome to Janelia, Ryan!"
+        image: assets/img/timeline/3.jpg
     end: yes
     end_title: "Come work with us!"
     end_desc: We have opportunities for undergraduate scholars and visisting scientists! See prospective positions in <a class="js-scroll-trigger" href="#team">TEAM</a> for details.
