--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -155,7 +155,7 @@ en: &DEFAULT_EN
         year: "May 2024"
         desc: "Welcome to Janelia, Ryan!"
         image: assets/img/timeline/3.jpg
-    end: yes
+    end: no
     end_title: "Come work with us!"
     end_desc: We have opportunities for undergraduate scholars and visisting scientists! See prospective positions in <a class="js-scroll-trigger" href="#team">TEAM</a> for details.
     end_image: assets/img/timeline/join-01.png
