update book chapter link

--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -151,7 +151,7 @@ en: &DEFAULT_EN
       #   year: "May 2024"
       #   desc: "Welcome to Janelia, Ryan!"
       #   image: assets/img/timeline/JRC_morning_002.jpg
-      - title: Angelo's <a href="https://authors.elsevier.com/a/1jB4xFzn7SU8w" target="_blank">book chapter</a> is online!
+      - title: Angelo's <a href="https://www.sciencedirect.com/science/article/pii/S0070215324000826?via%3Dihub" target="_blank">book chapter</a> is online!
         year: "May 2024"
         desc: "Congrats, Angelo!"
         image: assets/img/timeline/3.jpg
